# EasyShooter

./: .gitignore  Game.cryproject  LICENCE  README.md  cryplugin.csv
Code/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h  PluginENV.h  StdAfx.cpp  StdAfx.h
Code/Entities/Gameplay/: Lift.cpp  Lift.h  SpawnPoint.cpp  SpawnPoint.h
Code/Entities/Gameplay/Weapons/: Bullet.cpp  Bullet.h  ISimpleWeapon.h  Rifle.cpp  Rifle.h
Code/Entities/Helpers/: ISimpleExtension.h
Code/FireNet/: FireNet  IFireNetBase.h  IFireNetClientActions.h  IFireNetCore.h  IFireNetListener.h
Code/FireNet/FireNetClient/: IFireNetClientBase.h  IFireNetClientCore.h
Code/FireNet/FireNetCore/: IFireNetCore.h
Code/FlowNodes/: FlowNodesGame.cpp
Code/Game/: GameRules.cpp  GameRules.h
Code/Player/: ISimpleActor.h  Player.cpp  Player.h
Code/Player/Animations/: PlayerAnimations.cpp  PlayerAnimations.h
Code/Player/Input/: PlayerInput.cpp  PlayerInput.h
Code/Player/Movement/: PlayerMovement.cpp  PlayerMovement.h
Code/Player/View/: PlayerView.cpp  PlayerView.h
Code/UI/: IUIPage.h  UIManager.cpp  UIManager.h
Code/UI/HUD/: PageHUD.cpp  PageHUD.h
Code/UI/Menu/: PageAuthorization.cpp  PageAuthorization.h  PageError.cpp  PageError.h  PageInGame.cpp  PageInGame.h  PageLoading.cpp  PageLoading.h  PageLoadout.cpp  PageLoadout.h  PageMain.cpp  PageMain.h  PageProfile.cpp  PageProfile.h  PageServerSearch.cpp  PageServerSearch.h  PageSettings.cpp  PageSettings.h  PageShop.cpp  PageShop.h
Game/: game.cfg
Game/Levels/example/: example.bak  example.bak2  example.cry  example.cry.cryasset  filelist.xml  level.pak
Game/Levels/example/Layers/: Main.bak2  main.lyr
Game/Levels/example/leveldata/: Heightmap.bak
Game/Levels/pvp_alfa/: filelist.xml  level.pak  pvp_alfa.bak  pvp_alfa.bak2  pvp_alfa.cry  pvp_alfa.cry.cryasset
Game/Levels/pvp_alfa/Layers/: Main.bak  Main.bak2  main.lyr
Game/Levels/pvp_alfa/leveldata/: Heightmap.bak  Heightmap.bak2  Objectives.xml  TimeOfDay.xml
Game/Levels/pvp_alfa_0.1/: filelist.xml  level.pak  level.pak$  pvp_alfa_0.1.bak  pvp_alfa_0.1.bak2  pvp_alfa_0.1.cry  pvp_alfa_0.1.cry.cryasset
Game/Levels/pvp_alfa_0.1/Layers/: Main.bak  Main.bak2  environment.bak  environment.lyr  fence.lyr  (+1 more)
Game/Libs/UI/: GenerateGFX.bat
Game/Libs/config/: defaultprofile.xml
Game/Materials/: bag.mtl  bag2.mtl  bag3.mtl  elevator.mtl  floor_2.mtl
Game/Objects/Entities/: LiftBase.cgf  LiftBase.cgf.cryasset  liftbase.mtl
Game/Textures/others/: 2.dds  2.dds.cryasset  2.tif  3.dds  3.dds.cryasset  3.tif  Floor_2.tif  bag.dds  bag.dds.cryasset  bag.tif  floor_2.dds  floor_2.dds.cryasset
Game/_DEV_TRASH/: Map.bak  Map.dwg
Game/engineassets/codecoverage/: hit.dds.cryasset  pbar.dds.cryasset  unexpected.dds.cryasset
Game/engineassets/icons/: averagememoryusage.dds.cryasset  highmemoryusage.dds.cryasset  levelshadercachemiss.dds.cryasset  livepreview.dds.cryasset  lowmemoryusage.dds.cryasset  navigationprocessing.dds.cryasset  shadercompiling.dds.cryasset  streaming.dds.cryasset  streamingterrain.dds.cryasset
Game/engineassets/screenspace/: bokeh_pentagon.dds.cryasset  grain_bayer_mul.dds.cryasset  pointsonsphere4x4.dds.cryasset  pointsonspherevo4x4.dds.cryasset
Game/engineassets/shading/: defaultprobe_cm.dds.cryasset  defaultprobe_cm_diff.dds.cryasset  environmentbrdf.dds.cryasset  generic_reflections.dds.cryasset  layer_effect_anim_function.dds.cryasset  sonarvisiongradient.dds.cryasset  thermalvisiongradient.dds.cryasset  vignetting.dds.cryasset  waterfoam.dds.cryasset
Game/engineassets/texturemsg/: color_blue.dds.cryasset  color_cyan.dds.cryasset  color_green.dds.cryasset  color_magenta.dds.cryasset  color_orange.dds.cryasset  color_purple.dds.cryasset  color_red.dds.cryasset  color_white.dds.cryasset  color_yellow.dds.cryasset  defaultnouvs.dds.cryasset  mipmapdebug.dds.cryasset  replaceme.dds.cryasset  replacemecm.dds.cryasset  shadercompiling.dds.cryasset  shadererror.dds.cryasset
Game/engineassets/textures/: alienhud_distortionimage.dds.cryasset  alienhud_noise1.dds.cryasset  black.dds.cryasset  blackalpha.dds.cryasset  blackcm.dds.cryasset  cursor_green.dds.cryasset  default_cch.dds.cryasset  detaildecalvariation.dds.cryasset  fogvolshadowjitter.dds.cryasset  frost_refl2.dds.cryasset  glass_decalatlas_ddn.dds.cryasset  glass_decalatlas_diff.dds.cryasset  greyalpha.dds.cryasset  hex.dds.cryasset  hex_ddn.dds.cryasset  hex_grad.dds.cryasset  hex_rand.dds.cryasset  nightvis_grad.dds.cryasset  noise.dds.cryasset  oceanwaves_ddn.dds.cryasset  perlinnoise2d.dds.cryasset  perlinnoise_sum.dds.cryasset  perlinnoise_sum_small.dds.cryasset  perlinnoisenormal_ddn.dds.cryasset  scratch.dds.cryasset  screenfrost_alpha.dds.cryasset  screenfrost_ddn.dds.cryasset  texelspermetergrad.dds.cryasset  water_gloss.dds.cryasset  white.dds.cryasset  white_cm.dds.cryasset  white_cm_diff.dds.cryasset  white_ddn.dds.cryasset
(+113 files in other folders)
